--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,71 @@
 {
   "name": "AQDashboard",
-  "description": "Platform to research stock markets in a systematic way",
+  "authors": [
+    "Shiv Chawla <shivchawla2001@gmail.com>"
+  ],
+  "description": "Platform for systematic research of stock markets",
   "main": "index.html",
+  "keywords": [
+    "Finance",
+    "Trading",
+    "systematic",
+    "quantitative"
+  ],
+  "license": "AimsQuant",
+  "homepage": "",
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "iron-icon": "polymerelements/iron-icon#~1.0.5",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#~1.0.6",
-    "app-route": "PolymerElements/app-route#^0.9.2"
-  },
-  "devDependencies": {
+    "accessibility-developer-tools": "^2.10.0",
+    "app-route": "PolymerElements/app-route#^0.9.2",
+    "ag-grid": "^5.2.0",
+    "app-router": "^2.7.0",
+    "chai": "^3.2.0",
+    "async": "^1.5.0",
+    "chart-elements": "^3.1.1",
+    "core-a11y-keys": "Polymer/core-a11y-keys#master",
+    "core-focusable": "Polymer/core-focusable#master",
+    "core-icon": "Polymer/core-icon#master",
+    "core-overlay": "Polymer/core-overlay#master",
+    "gold-email-input": "^1.0.7",
+    "hydrolysis": "Polymer/hydrolysis#^1.18",
+    "google-chart": "^1.1.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "iron-pages": "^1.0.8",
+    "iron-range-behavior": "PolymerElements/iron-range-behavior#^1.0.0",
+    "juicy-ace-editor": "^1.2.0",
+    "marked-element": "^1.2.0",
+    "lodash": "^3.7.0",
+    "mocha": "^2.3.0",
+    "paper-card": "PolymerElements/paper-card#^1.1.2",
+    "paper-checkbox": "^1.4.0",
+    "paper-date-picker": "^0.1.5",
+    "paper-datatable": "^0.9.8",
+    "paper-dialog-scrollable": "^1.1.5",
+    "paper-dialog": "^1.1.0",
+    "paper-dropdown-menu": "^1.3.5",
+    "paper-drawer-panel": "^1.0.10",
+    "paper-fab": "^1.2.0",
+    "paper-listbox": "^1.1.2",
+    "paper-item": "^1.2.1",
+    "paper-menu": "^1.2.2",
+    "paper-scroll-header-panel": "^1.0.16",
+    "paper-shadow": "Polymer/paper-shadow#master",
+    "paper-tabs": "^1.6.2",
+    "paper-tooltip": "^1.1.2",
+    "sinonjs": "^1.14.1",
+    "test-fixture": "polymerelements/test-fixture#^1.0.0",
+    "sinon-chai": "^2.7.0",
+    "stacky": "^1.3.0",
+    "vaadin-icons": "^1.0.2",
     "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+    "vaadin-grid": "^1.1.1"
   }
 }
