--- a/bower.json
+++ b/bower.json
@@ -66,7 +66,8 @@
     "stacky": "^1.3.0",
     "vaadin-icons": "^1.0.2",
     "web-component-tester": "^4.0.0",
-    "vaadin-grid": "^1.1.1"
+    "vaadin-grid": "^1.1.1",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
   },
   "resolutions": {
     "paper-dialog": "master",
