1. Added Help Page and related items. 2 Modified Editor designs. 3. Add new markdown editor

--- a/bower.json
+++ b/bower.json
@@ -67,6 +67,8 @@
     "vaadin-icons": "^1.0.2",
     "web-component-tester": "^4.0.0",
     "vaadin-grid": "^1.1.1",
+    "simplemde": "^1.11.2",
+    "iron-scroll-spy": "Zecat/iron-scroll-spy#^2.1.0",
     "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
   },
   "resolutions": {
