--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,22 @@
 {
-  "name": "AQDashboard",
+  "name": "y",
+  "description": "y",
+  "main": "index.js",
   "authors": [
-    "Shiv Chawla <shivchawla2001@gmail.com>"
+    "y"
   ],
-  "description": "Platform for systematic research of stock markets",
-  "main": "index.html",
+  "license": "y",
   "keywords": [
     "Finance",
     "Trading",
-    "systematic",
-    "quantitative"
+    "Systematic",
+    "Investment",
+    "Backtesting",
+    "Stock",
+    "Martket",
+    "Equity"
   ],
-  "license": "AimsQuant",
-  "homepage": "",
+  "homepage": "index.html",
   "private": true,
   "ignore": [
     "**/.*",
@@ -22,62 +26,44 @@
     "tests"
   ],
   "dependencies": {
-    "accessibility-developer-tools": "^2.10.0",
-    "app-route": "PolymerElements/app-route#^0.9.2",
-    "ag-grid": "^5.2.0",
     "app-router": "^2.7.0",
-    "chai": "^3.2.0",
     "async": "^1.5.0",
-    "chart-elements": "^3.1.1",
     "core-a11y-keys": "Polymer/core-a11y-keys#master",
     "core-focusable": "Polymer/core-focusable#master",
     "core-icon": "Polymer/core-icon#master",
     "core-overlay": "Polymer/core-overlay#master",
     "gold-email-input": "^1.0.7",
-    "hydrolysis": "Polymer/hydrolysis#^1.18",
-    "google-chart": "^1.1.0",
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
     "iron-pages": "^1.0.8",
+    "iron-scroll-spy": "Zecat/iron-scroll-spy#^2.1.0",
     "iron-range-behavior": "PolymerElements/iron-range-behavior#^1.0.0",
-    "juicy-ace-editor": "^1.2.0",
+    "iron-signals": "^1.0.3",
+    "jsdiff": "^2.2.2",
     "marked-element": "^1.2.0",
-    "lodash": "^3.7.0",
-    "mocha": "^2.3.0",
+    "juicy-ace-editor": "^1.2.0",
+    "nvd3-elements": "^0.18.0",
+    "paper-button-group": "^0.0.1",
     "paper-card": "PolymerElements/paper-card#^1.1.2",
     "paper-checkbox": "^1.4.0",
-    "paper-datatable": "^0.9.8",
     "paper-dialog-scrollable": "^1.1.5",
-    "paper-dialog": "^1.1.0",
-    "paper-dropdown-menu": "^1.3.5",
     "paper-drawer-panel": "^1.0.10",
+    "paper-dropdown-menu": "^1.3.5",
+    "paper-dialog": "^1.1.0",
     "paper-fab": "^1.2.0",
-    "paper-listbox": "^1.1.2",
     "paper-item": "^1.2.1",
+    "paper-listbox": "^1.1.2",
     "paper-menu": "^1.2.2",
-    "paper-scroll-header-panel": "^1.0.16",
+    "paper-radio-button": "^1.2.1",
+    "paper-radio-group": "^1.2.0",
     "paper-shadow": "Polymer/paper-shadow#master",
+    "paper-scroll-header-panel": "^1.0.16",
     "paper-tabs": "^1.6.2",
+    "paper-toggle-button": "^1.2.1",
     "paper-tooltip": "^1.1.2",
-    "sinonjs": "^1.14.1",
-    "test-fixture": "polymerelements/test-fixture#^1.0.0",
-    "sinon-chai": "^2.7.0",
-    "stacky": "^1.3.0",
-    "vaadin-icons": "^1.0.2",
-    "web-component-tester": "^4.0.0",
-    "vaadin-grid": "^1.1.1",
     "simplemde": "^1.11.2",
-    "iron-scroll-spy": "Zecat/iron-scroll-spy#^2.1.0",
-    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6"
-  },
-  "resolutions": {
-    "paper-dialog": "master",
-    "paper-styles": "~1.0.12",
-    "polymer": "master",
-    "paper-item": "~1.0.5",
-    "paper-checkbox": "^1.4.0",
-    "paper-button": "master",
-    "font-roboto": "master",
-    "paper-ripple": "master"
+    "vaadin-icons": "^1.0.2",
+    "vaadin-grid": "^1.1.1",
+    "web-socket": "*"
   }
 }
