--- a/bower.json
+++ b/bower.json
@@ -65,6 +65,7 @@
     "vaadin-icons": "^2.0.0",
     "vaadin-grid": "^1.1.1",
     "web-socket": "*",
-    "iron-meta": "PolymerElements/iron-meta#^1.1.2"
+    "iron-meta": "PolymerElements/iron-meta#^1.1.2",
+    "app-route": "*"
   }
 }
