--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,6 @@
     "tests"
   ],
   "dependencies": {
-    "app-router": "^2.7.0",
     "async": "^1.5.0",
     "core-a11y-keys": "Polymer/core-a11y-keys#master",
     "core-focusable": "Polymer/core-focusable#master",
@@ -66,6 +65,6 @@
     "vaadin-grid": "^1.1.1",
     "web-socket": "*",
     "iron-meta": "PolymerElements/iron-meta#^1.1.2",
-    "app-route": "*"
+    "app-route": "PolymerElements/app-route#^0.9.3"
   }
 }
