--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,7 @@
     "jsdiff": "^2.2.2",
     "marked-element": "^1.2.0",
     "juicy-ace-editor": "^1.2.0",
-    "nvd3-elements": "^0.18.0",
+    "nvd3-elements": "0.18",
     "paper-button-group": "^0.0.1",
     "paper-card": "PolymerElements/paper-card#^1.1.2",
     "paper-checkbox": "^1.4.0",
@@ -65,6 +65,7 @@
     "vaadin-grid": "^1.1.1",
     "web-socket": "*",
     "iron-meta": "PolymerElements/iron-meta#^1.1.2",
-    "app-route": "PolymerElements/app-route#^0.9.3"
+    "app-route": "PolymerElements/app-route#^0.9.3",
+    "hydrolysis": "^1.24.1"
   }
 }
