--- a/bower.json
+++ b/bower.json
@@ -66,6 +66,7 @@
     "web-socket": "*",
     "iron-meta": "PolymerElements/iron-meta#^1.1.2",
     "app-route": "PolymerElements/app-route#^0.9.3",
-    "hydrolysis": "^1.24.1"
+    "hydrolysis": "^1.24.1",
+    "chart-elements": "^3.1.3"
   }
 }
