--- a/bower.json
+++ b/bower.json
@@ -67,6 +67,7 @@
     "iron-meta": "PolymerElements/iron-meta#^1.1.2",
     "app-route": "PolymerElements/app-route#^0.9.3",
     "hydrolysis": "^1.24.1",
-    "chart-elements": "^3.1.3"
+    "chart-elements": "^3.1.3",
+    "highcharts-chart": "^2.0.0"
   }
 }
