--- a/bower.json
+++ b/bower.json
@@ -68,6 +68,7 @@
     "app-route": "PolymerElements/app-route#^0.9.3",
     "hydrolysis": "^1.24.1",
     "chart-elements": "^3.1.3",
-    "highcharts-chart": "^2.0.0"
+    "highcharts-chart": "^2.0.0",
+    "paper-progress": "^1.0.11"
   }
 }
