--- a/bower.json
+++ b/bower.json
@@ -69,6 +69,7 @@
     "hydrolysis": "^1.24.1",
     "chart-elements": "^3.1.3",
     "highcharts-chart": "^2.0.0",
-    "paper-progress": "^1.0.11"
+    "paper-progress": "^1.0.11",
+    "polymer-quill": "chuckh/polymer-quill#^1.2.0"
   }
 }
