--- a/bower.json
+++ b/bower.json
@@ -71,6 +71,7 @@
     "highcharts-chart": "^2.0.0",
     "paper-progress": "^1.0.11",
     "iron-lazy-pages": "^1.4.4",
-    "iron-collapse": "PolymerElements/iron-collapse#^1.3.0"
+    "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
   }
 }
