--- a/bower.json
+++ b/bower.json
@@ -72,6 +72,7 @@
     "paper-progress": "^1.0.11",
     "iron-lazy-pages": "^1.4.4",
     "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
-    "paper-toast": "PolymerElements/paper-toast#^1.3.0"
+    "paper-toast": "PolymerElements/paper-toast#^1.3.0",
+    "polymer-quill": "chuckh/polymer-quill#^1.2.0"
   }
 }
