--- a/bower.json
+++ b/bower.json
@@ -73,6 +73,8 @@
     "iron-lazy-pages": "^1.4.4",
     "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "polymer-quill": "chuckh/polymer-quill#^1.2.0"
+    "polymer-quill": "chuckh/polymer-quill#^1.2.0",
+    "paper-date-picker": "bendavis78/paper-date-picker#^1.2.0",
+    "vaadin-date-picker": "vaadin/vaadin-date-picker#^1.2.1"
   }
 }
