--- a/bower.json
+++ b/bower.json
@@ -69,6 +69,6 @@
     "iron-lazy-pages": "^1.4.4",
     "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "polymer-quill": "chuckh/polymer-quill#^1.2.0",
+    "polymer-quill": "chuckh/polymer-quill#^1.2.0"
   }
 }
