--- a/bower.json
+++ b/bower.json
@@ -59,7 +59,7 @@
     "paper-tabs": "^1.6.2",
     "paper-toggle-button": "^1.2.1",
     "paper-tooltip": "^1.1.2",
-    "vaadin-grid": "vaadin/vaadin-grid#^1.2.2",
+    "vaadin-grid": "^3.0.2",
     "web-socket": "*",
     "iron-meta": "PolymerElements/iron-meta#^1.1.2",
     "app-route": "PolymerElements/app-route#^0.9.3",
@@ -69,6 +69,16 @@
     "iron-lazy-pages": "^1.4.4",
     "iron-collapse": "PolymerElements/iron-collapse#^1.3.0",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
-    "polymer-quill": "chuckh/polymer-quill#^1.2.0"
+    "polymer-quill": "chuckh/polymer-quill#^1.2.0",
+    "paper-spinner": "^2.0.0"
+  },
+  "resolutions": {
+    "iron-a11y-announcer": "^1.0.0",
+    "polymer": "^1.3.1",
+    "iron-a11y-keys-behavior": "^1.0.0",
+    "iron-scroll-target-behavior": "^1.0.6",
+    "iron-resizable-behavior": "^1.0.0",
+    "webcomponentsjs": "^0.7.2",
+    "vaadin-grid": "^3.0.2"
   }
 }
